# Addison

./: .gitignore  CLAUDE.md  LICENSE.md  License  License.md  README.md  pyrightconfig.json
.claude/: launch.json
.github/workflows/: ci.yml
agent_core/: __init__.py  live_db_guard.py  main.py  models_catalog.py  net_vetting.py  orchestrator.py  policy.py  profiles.py  protocol.py  pyproject.toml  shell_bridge.py  skills.py  widgets.py
agent_core/memory/: schema.sql  store.py
agent_core/permissions/: gate.py
agent_core/providers/: anthropic_provider.py  base.py  direct_api_provider.py  google_provider.py  ollama_provider.py  openai_provider.py  router.py  setup_assistant_provider.py  tool_call_parser.py
agent_core/providers/prompts/: primary.txt  setup_assistant.txt
agent_core/routines/: builder.py  engine.py  library.py  model.py
agent_core/rpc/: __init__.py  base.py  constants.py  conversation.py  cost_plan.py  guards.py  models.py  profile.py  providers.py  routines.py  routing.py  skills.py  snapshots.py  undo.py  widgets.py  workspace.py
agent_core/snapshots/: model.py  scope.py  snapshot_manager.py  undo_manager.py
agent_core/tools/: base.py  calculator.py  draft_message.py  open_link.py  read_clipboard.py  read_file.py  read_project_file.py  read_web_page.py  registry.py  run_command.py  save_file.py  snapshot_now.py  web_search.py  write_project_file.py
docs/: HANDOFF.md  TESTING-CHECKLIST.md  VERIFICATION.md  addison-design-doc.md  addison-engineering-spec.md  addison-scope-amendment-2026-07.md  architecture.md  classes.md  data-model.md  flows.md  test-hardening-plan.md
docs/design-brief-fern/: Addison App.dc.html  Addison Brand Book.dc.html  Addison Logo.dc.html  Addison Mobile.dc.html  Addison Redesign Directions.dc.html  README.md
scripts/: sign-dev-binary.sh
shell/: eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
shell/src/: App.tsx  main.tsx  styles.css
shell/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
shell/src-tauri/capabilities/: default.json
shell/src-tauri/icons/: icon.icns
shell/src-tauri/src/: agent_process.rs  app_build.rs  filesystem.rs  ipc.rs  keychain.rs  main.rs  updater.rs
shell/src/__tests__/: activityPanel.test.tsx  guards.test.tsx  offers.test.tsx  parsers.fixtures.test.ts  parsers.test.ts  renameConversation.test.tsx  routing.test.tsx  skills.test.ts  snapshots.test.ts  step4.test.tsx  theme.test.ts  useTurn.test.tsx  workspace.test.tsx
shell/src/__tests__/fixtures/: costPlan.propose.json  endpoint.proposeFromConversation.json  model.availableRoles.json  profile.get.json  snapshot.list.json  stats.get.json  tool.activityUpdate.json  widget.list.json  workspace.list.json
shell/src/assets/fonts/: OFL-NOTICE.txt
shell/src/components/: ActivityPanel.tsx  Banner.tsx  BellLogo.tsx  BottomSheet.tsx  ChatThread.tsx  Composer.tsx  CostPlanCard.tsx  CustomGuardPanel.tsx  EndpointProposalCard.tsx  FirstRunBanner.tsx  HistoryView.tsx  LocalModelSetup.tsx  Markdown.tsx  MermaidDiagram.tsx  MobileDrawer.tsx  ModelSelector.tsx  PermissionCard.tsx  RewindControls.tsx  RoutineLibrary.tsx  RoutineProposalCard.tsx  RoutingCard.tsx  SettingsDrawer.tsx  SettingsPage.tsx  Sidebar.tsx  SkillsSection.tsx  SnapshotsCard.tsx  WidgetProposalCard.tsx  WidgetRail.tsx  WorkspaceTrustPanel.tsx
shell/src/hooks/: useConversations.ts  useGuards.ts  useMediaQuery.ts  useModelSelection.ts  useOffers.ts  useRouting.ts  useSkills.ts  useSnapshots.ts  useTurn.ts  useWidgets.ts  useWorkspace.ts
shell/src/ipc/: client.ts
shell/src/lib/: parse.ts  theme.ts
shell/src/types/: protocol.ts  ui.ts
tests/: conftest.py  ipc_fixtures.py  test_anthropic_provider.py  test_calculator.py  test_cost_plan.py  test_custom_profile_guards.py  test_dev_only_boundary.py  test_direct_api_provider.py  test_endpoint_add.py  test_free_models_catalog.py  test_g2_no_self_trigger.py  test_google_provider.py  test_ipc_fixture_drift.py  test_ipc_server.py  test_ipc_snapshots.py  test_local_setup.py  test_model_picker.py  test_model_router.py  test_module_boundaries.py  test_net_vetting.py  test_ollama_provider.py  test_openai_provider.py  test_orchestrator.py  test_policy_modes.py  test_profiles.py  test_profiles_step11.py  test_protocol_drift.py  test_provider_exceptions.py  test_provider_retry.py  test_read_web_page.py  test_resolve_chain.py  test_routines.py  test_routing_fallback.py  test_routing_rpc.py  test_run_command.py  test_setup_assistant.py  test_shell_bridge.py  test_skills.py  test_snapshot_hooks.py  test_snapshot_now.py  (+9 more)
