[package]
name = "addison"
version = "0.1.0"
description = "Addison — local-first consumer agent harness"
edition = "2021"
rust-version = "1.77"

# Engineering-spec §1.2: Tauri 2.x. The Rust shell owns the OS-permission-sensitive
# code (keychain, filesystem picker, updater) and supervises the Python Agent Core.

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-updater = "2"          # signed silent updates (design-doc §7.7) — wired in Phase 3
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
rfd = "0.15"                        # native file dialogs (open/save picker) — §7.4.1
arboard = "3"                       # clipboard text (shell.readClipboard)
open = "5"                          # open http(s) links in the default browser (shell.openExternal)
base64 = "0.22"                     # encode picked images for shell.readScopedFile
uuid = { version = "1", features = ["v4"] }   # opaque file handles + device_id (§5)

# Device identity keypair (§5): ed25519 signing key generated in the shell on first
# launch, private half stored ONLY in the OS keychain. `rand_core`'s OsRng is the
# CSPRNG that seeds it; the `rand_core` feature exposes `SigningKey::generate`.
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand_core = { version = "0.6", features = ["getrandom"] }

# OS keychain (BYOK keys, device key) — §5. Feature-select the platform-native
# store per target so a macOS `cargo check` never tries to build the Linux
# secret-service backend (and vice-versa). Cross-platform packaging is Phase 3.
[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3", features = ["apple-native"] }

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3", features = ["windows-native"] }

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3", features = ["sync-secret-service"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
